<resources>
    <string name="app_name">TravelBus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="API_KEY">AIzaSyDCPcEo4_Oc415ssCIun92qoIzhZSpzUI8</string>
    <string name="india">India</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="login_using_otp">Login Using Otp</string>
    <string name="term_and_condition">By signing in, you agree to our Terms and Conditions and Privacy Policy</string>
    <string name="log_in">Log In</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="relax_we_will_automatically_validate_otp">Relax, we will automatically validate OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm">Confirm</string>
    <string name="pune_to_mumbai">Pune to Mumbai</string>
</resources>