<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.adapter.fragments.SignUpFragment">

    <TextView
        android:id="@+id/tvLoginHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/materialRed"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="10dp"
        android:paddingEnd="45dp"
        android:text="SignUp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:drawableStartCompat="@drawable/ic_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/ivLoginImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/materialRed"
        android:padding="15dp"
        android:src="@drawable/sign_up_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginHeading" />

    <TextView
        android:id="@+id/tvLoginUsing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/login_using_otp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginImage" />


    <TextView
        android:id="@+id/tvEnterMoNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:text="Enter Mobile Number"
        android:textColor="@color/materialRed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginUsing" />


    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rectangle_border"
        android:drawableStart="@drawable/ic_call_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnterMoNum" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/materialRed"
        android:text="I have a referral code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMobileNo" />


    <EditText
        android:id="@+id/etReferralCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rectangle_border"
        android:drawableStart="@drawable/ic_referral_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="Referral Code"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox" />


    <TextView
        android:id="@+id/tvTermCondtn123"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/term_and_condition"
        android:textColor="#9FA1A3"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="25dp"
        android:text="Sign Up"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>